# firewatcher

./: Cargo.toml  README.md
migrations/2022-12-11-105052_create_twitter_account/: down.sql  up.sql
migrations/2022-12-11-171711_create_twitter_credentials/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/twitter/: credentials_manager.rs  mod.rs
